create the craziest conditional part I

--- a/new_html/first_lesson.html
+++ b/new_html/first_lesson.html
@@ -4,14 +4,53 @@
     <title>Learning Javascript</title>
   <script type='text/javascript'>
 
-    var name = 'Joe';
-    function message() {
-      return 'hey there, ' + name + '!';
+  var snacks = [ 14, 'peanuts', 'popcorn', 33, 1, 'feet', 'daydreams', 'pencils', 9005674, " ", ];
+    for (var i = 0; i > snacks.length; i+2) {
+      console.log(snacks[i]);
     }
 
-    function sayHello() {
-      alert(message());
-    }
+
+
+
+/////////////////////////////////////////
+
+  // var names = ['Joe', 'Bob'];
+  // for (var i = 0; i < names.length; i++) {
+  //   alert(names[i]);
+  // }
+
+  // var i = 0;
+  // while(i < names.length) {
+  //   alert(names[i]);
+  //   i++;
+  // }
+
+
+/////////////////////////////////////////
+
+    // var name = 'Joe';
+    // function message() {
+    //   if (name === 'Joe') {
+    //     return 'hey buddy!';
+    //   } else {
+    //   return 'do I know you?';
+    //   }
+    // }
+
+    // function sayHello() {
+    //   alert(message());
+    // }
+
+//////////////////////////////////////////
+
+    // var name = 'Joe';
+    // function message() {
+    //   return 'hey there, ' + name + '!';
+    // }
+
+    // function sayHello() {
+    //   alert(message());
+    // }
 
 /////////////////////////////////////////
 
